--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="Polecane Komputery - Krzysztof Nasuta"/>
+    <meta name="keywords" content="komputery, pc, składanie komputerów, podzepoły komputerowe, krzysztof nasuta">
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -20,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Komputery</title>
+    <title>Polecane komputery</title>
   </head>
   <body>
     <noscript>
